--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,11 +1,11 @@
 [master]
-34.201.245.245
+44.202.16.248
 
 [monitoring]
-35.172.114.51
+54.173.42.236
 
 [all:vars]
 ansible_user=ubuntu
-ansible_ssh_private_key_file=~/.ssh/Assignment-Key.pem
+ansible_ssh_private_key_file=/home/ubuntu/Assignment-Key.pem
 
 #update the IP's as per the publicips of the instances created once terraform apply is done
